[JENKINS-51965] Removing JAXB dependency